[options]
python_requires = >= 3.7
# install_requires =
#     click
#     etelemetry
#     pyshacl
#     PyLD
#     requests
#     requests_cache

test_requires =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
packages = find:

[options.package_data]
reproschema =
    tests/contexts/*
    tests/data/**/*.jsonld
    tests/*.ttl

[options.extras_require]
doc =
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
all =
    %(doc)s
    %(dev)s


[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=miss_hit_gallery,test
ignore_missing_imports=true

[tool:pytest]
testpaths=test/
